
8.0.2 (2023-08-??) (MA)
-----------------------
Bugs:
- MA 2.4.6: The Zend_Mail framework has been removed in favor of the Laminas mail library.
- MA: Form values were not set for elements with different id and name (array style name).
- MA: Radio options with an "empty" value (e.g. 0 or "0") did not have their button
  rendered.

Features:
- Updated the PHP compatibility table by adding a column for PHP 8.2.

Refactorings:
- MA: Implemented the new "collect-complete architecture" for Magento.
- ALL: many small, but possibly breaking, changes:
  - Source: not all getters were correctly implemented. However, most errors had low risk
    of appearing in live situations.
  - Source: stricter type handling.
  - Extract number from order or invoice reference: changed, should be more logical now.
  - Call parent method more often, even if it is currently a no-op.
  - Moved field Salutation from Address to Customer as there is no field altSalutation.


8.0.1 (2023-07-25) (WC)
-----------------------
Bugs:
- DomainException: type: not an allowed value: 0 in .../Data/AcumulusProperty.php:207.
- TypeError: Siel\Acumulus\Helpers\Countries::isNl(): Argument #1 ($countryCode) must be
  of type string, null given, called in src/Completors/Legacy/Completor.php on line 1531
  and defined in src/Helpers/Countries.php:26
- TypeError: preg_replace(): Argument #3 ($subject) must be of type array|string, int
  given in src/Completors/Invoice/CompleteInvoiceNumber.php:51
- Error: Call to protected method
  Siel\Acumulus\Completors\Legacy\Completor::changeInvoiceToConcept() from context
  'Siel\Acumulus\Completors\Legacy\CompletorInvoiceLines' in
  siel/acumulus/src/Completors/Legacy/CompletorInvoiceLines.php:262
- PC|OC: PHP Fatal error: Uncaught Exception: Error: Duplicate entry '1' for key
  'acumulus_idx_entry_id'<br />Error No: 1062<br />INSERT INTO `oc_acumulus_entry`
  (store_id, entry_id, token, source_type, source_id, updated) VALUES (0, 1, 'Send locked,